--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,6 @@ jobs:
       - name: Run tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          REDIS: "redis://redis:6379"
+          REDIS: "redis://localhost:6379"
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: yarn test
