--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,4 +49,4 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           REDIS: "redis://localhost:6379"
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: yarn test
+        run: yarn test --verbose
