--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 6379:6379
 
     steps:
       - name: Checkout repository
@@ -47,6 +49,6 @@ jobs:
       - name: Run tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          REDIS: "redis://redis:6379"
+          REDIS: "redis://localhost:6379"
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: yarn test --verbose
