--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elelem",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Simple, opinionated, JSON-typed, and traced LLM framework for TypeScript.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,6 +33,7 @@
     "@faker-js/faker": "^8.0.2",
     "@opentelemetry/api": "^1.6.0",
     "@types/object-hash": "^3.0.4",
+    "cohere-ai": "^6.2.2",
     "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
     "ioredis": "^5.3.2",
@@ -43,9 +44,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@opentelemetry/tracing": "^0.24.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.44.0",
     "@opentelemetry/sdk-node": "^0.44.0",
+    "@opentelemetry/tracing": "^0.24.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
